# AppMeshastic

./: .gitignore  AppMeshastic.spec  README.md  icon.icns  pyproject.toml  release.sh  requirements.txt
.github/workflows/: build.yml
app/: api.py  main.py  updater.py
app/core/: connection_history.py  emoji_config.py  internet_bridge.py  message_bus.py  mirror_connection.py  node_id_utils.py  node_manager.py
app/core/connections/: base.py  ble_conn.py  channel_utils.py  serial_conn.py  wifi_conn.py
app/data/: models.py  node_store.py
app/data/repositories/: messages.py  nodes.py  reactions.py  traceroutes.py
app/frontend/: app.js  index.html  style.css
app/frontend/components/: ChatView.js  ConnectionDialog.js  DcpToggle.js  DeviceConfigPanel.js  EmojiSettingsDialog.js  InputBar.js  MessageBubble.js  NodeInfoModal.js  NodesSidebar.js  SettingsDialog.js  ToastNotification.js  UpdateDialog.js
app/frontend/directives/: tooltip.js
app/frontend/utils/: format.js  glyphzip.js
